# rust-damage-rects

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
examples/: visualize.rs
src/: lib.rs
tests/: perf_gate.rs
