[package]
name = "damage-rects"
version = "0.1.1"
description = "Accumulate, coalesce, and emit dirty rectangles for partial GPU redraw"
keywords = ["damage", "dirty", "rect", "redraw", "gpu"]
categories = ["graphics", "gui", "rendering"]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/goliajp/rust-damage-rects"
homepage = "https://github.com/goliajp/rust-damage-rects"
authors = ["GOLIA株式会社", "Li Hao <lihao@golia.jp>"]
readme = "README.md"
documentation = "https://docs.rs/damage-rects"

[dependencies]

[dev-dependencies]
winit = "0.30"
softbuffer = "0.4"

[[example]]
name = "visualize"

[profile.release]
lto = true
codegen-units = 1
